# look

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  Makefile.mac  Makefile.win  Makefile.winui3  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci-nix.yml  ci.yml  release-linux.yml  release-windows-tauri.yml  release-windows-winui3.yml  release-windows.yml  reusable-release-macos.yml  reusable-release-windows-winui3.yml
apps/linows/: .prettierrc  BUILDING.md  DESIGN.md  FEATURES.md  FUNCTIONS.md  PLAN-SHELL-SEARCH.md  README.md  TASKS.md  WINDOWS.md  flake.nix
apps/linows/assets/: look-desktop.desktop  lookapp.desktop
apps/linows/nix/: module.nix  package.nix
apps/linows/src/: index.html
apps/linows/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
apps/linows/src-tauri/src/: answers.rs  autostart.rs  calc.rs  clipboard.rs  commands.rs  config.rs  consts.rs  crash.rs  default_config.txt  files.rs  health.rs  linux_gnome_ext.rs  linux_transparency.rs  linux_wayland_shortcut.rs  linux_window_focus.rs  linux_wlr_focus.rs  main.rs  platform.rs  process.rs  shell.rs  state.rs  sysinfo.rs  translate.rs  trash.rs  weburl.rs
apps/linows/src-tauri/src/gnome-shell-extension/: extension.js  metadata.json
apps/linows/src-tauri/src/highlight/: html.rs  lang.rs  mod.rs  tokenizer.rs
apps/linows/src-tauri/src/platform/: mod.rs
apps/linows/src-tauri/src/platform/linux/: autostart.rs  clipboard.rs  dbus.rs  fonts.rs  gnome_ext.rs  gpu.rs  kde_focus.rs  mod.rs  process.rs  sysinfo.rs  transparency.rs  version.rs  wayland_shortcut.rs  window_focus.rs  wlr_focus.rs  wm.rs
apps/linows/src-tauri/src/platform/windows/: autostart.rs  clipboard.rs  drives.rs  effects.rs  fonts.rs  icons.rs  known_folders.rs  mod.rs  process.rs  recycle_bin.rs  sysinfo.rs  version.rs  window_focus.rs
apps/linows/src-tauri/src/qactions/: mod.rs
apps/linows/src-tauri/src/qactions/controls/: bluetooth.rs  bluetooth_windows.rs  mod.rs
apps/linows/src/css/: layout.css  reset.css  theme.css
apps/linows/src/js/: app.js  catalog.js  html-loader.js  icons.js  ipc.js  keyboard.js  layout.js  platform.js  search.js
apps/macos/LauncherApp/: Package.swift
apps/macos/LauncherApp/LauncherLogicTests/: ConfigFileLinesTests.swift  DeleteTargetLogicTests.swift  LauncherSearchLogicTests.swift
apps/macos/LauncherApp/look-app/: look_appApp.swift
apps/macos/LauncherApp/look-app.xcodeproj/: project.pbxproj
apps/windows/: note.md
apps/windows/LauncherApp/: App.SingleInstance.cs  App.xaml  App.xaml.cs  LauncherApp.csproj  LauncherApp.slnx  MainWindow.Backdrop.cs  MainWindow.Banner.cs  MainWindow.Clipboard.cs  MainWindow.Commands.cs  MainWindow.DevHint.cs  MainWindow.Interop.cs  MainWindow.Keyboard.cs  MainWindow.Lifecycle.cs  MainWindow.Picks.cs  MainWindow.Search.cs  MainWindow.Zoom.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
apps/windows/LauncherApp.Tests/: AdvancedSettingsSaveLogicTests.cs  AppearanceSettingsSaveLogicTests.cs  DriveDiscoveryServiceTests.cs  LauncherApp.Tests.csproj  LookConfigTests.cs
apps/windows/LauncherApp/Bridge/: BridgeModels.cs  EngineBridge.cs  FfiBindings.cs
apps/windows/LauncherApp/Commands/: CalcCommand.cs  KillCommand.cs  ShellCommand.cs  SystemInfoCommand.cs
apps/windows/LauncherApp/Converters/: BoolToVisibilityConverter.cs  IconConverters.cs
apps/windows/LauncherApp/Core/: AppCommandItem.cs  ClipboardRowItem.cs  KillCandidateItem.cs  LauncherMode.cs  LauncherRowItem.cs
apps/windows/LauncherApp/Properties/: launchSettings.json
apps/windows/LauncherApp/Services/: ActionDispatcher.cs  AdvancedSettingsSaveLogic.cs  AppearanceSettingsSaveLogic.cs  ClipboardHistoryService.cs  DriveDiscoveryService.cs  ExplorerRevealService.cs  IconService.cs  LookConfig.cs  SettingsIconCatalog.cs  ShellExecuteService.cs  ShellIconProvider.cs  StartupRegistration.cs  ThemeBootstrap.cs  TranslationService.cs  UwpAppService.cs
apps/windows/LauncherApp/Views/: HelpScreenView.xaml  HelpScreenView.xaml.cs  KeyChordRowView.xaml  KeyChordRowView.xaml.cs  LabeledSliderView.xaml  LabeledSliderView.xaml.cs  LauncherResultRowView.xaml  LauncherResultRowView.xaml.cs  PickedItemsPanelView.xaml  PickedItemsPanelView.xaml.cs  ResultPreviewView.xaml  ResultPreviewView.xaml.cs  TranslateLanguageSectionView.xaml  TranslateLanguageSectionView.xaml.cs  TranslatePanelView.xaml  TranslatePanelView.xaml.cs
bridge/ffi/: Cargo.toml
bridge/ffi/src/: answers_api.rs  lib.rs  qactions_api.rs  seed_api.rs  todo_api.rs  translate_api.rs  url_history_api.rs
core/: Cargo.toml
core/answers/: Cargo.toml
core/answers/src/: fmt.rs  http.rs  json.rs  lib.rs  parse.rs  translate.rs  types.rs  url.rs
core/answers/src/sources/: crypto.rs  mod.rs  (+4 more)
core/engine/: Cargo.toml
core/engine/src/: config.rs  lib.rs  query.rs  scoring.rs  search.rs  url_history.rs
core/engine/src/index/: files.rs  mod.rs  settings.rs
core/engine/src/platform/: mod.rs  paths.rs
core/engine/src/platform/linux/: mod.rs  settings_catalog.rs
core/engine/src/platform/macos/: apps.rs
core/engine/src/platform/windows/: apps.rs  control_panel.rs  lnk.rs  mod.rs  settings_catalog.rs  uwp.rs
core/indexing/src/: lib.rs
core/qactions/: Cargo.toml
core/qactions/src/: lib.rs
core/ranking/src/: lib.rs
core/storage/: Cargo.toml
core/storage/src/: lib.rs
core/todo/: Cargo.toml
core/todo/src/: lib.rs
docs/: architecture.md  backend-guide.md  features.md  tasks.md  user-guide.md  windows-cicd-plan.md  windows-port-plan.md  windows-v1-parity-checklist.md  writing-controls.md
docs/bench-notes/: 2026-04-23.md
packaging/aur/: PKGBUILD  README.md
scripts/: Makefile.win  Makefile.winui3
scripts/linux/: install-look.sh  strip-appimage-wayland-libs.sh
scripts/windows/: build-ffi.ps1  install-look.ps1  with-vcvars.bat
tools/perf/: WATCHER_PERF.md  scoped_refresh_bench.rs  watcher_stress.rs
(+145 files in other folders)
