[package]
name = "look-ffi"
edition = "2024"
license = "MIT"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
look-answers = { path = "../../core/answers" }
look-engine = { path = "../../core/engine" }
look-indexing = { path = "../../core/indexing" }
look-storage = { path = "../../core/storage" }
look-todo = { path = "../../core/todo" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
