[package]
name = "look-engine"
edition = "2024"
license = "MIT"
version = "0.1.0"

[dependencies]
look-indexing = { path = "../indexing" }
look-matching = { path = "../matching" }
look-ranking = { path = "../ranking" }
look-storage = { path = "../storage" }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
