[package]
name = "lookapp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
look-answers = { path = "../../../core/answers" }
look-engine = { path = "../../../core/engine" }
look-qactions = { path = "../../../core/qactions" }
look-storage = { path = "../../../core/storage" }
look-todo = { path = "../../../core/todo" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
open = "5"
base64 = "0.22"
rodio = "0.20"
arboard = { version = "3", features = ["wayland-data-control"] }
dirs = "6"
tauri-plugin-dialog = "2"
trash = "5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
zbus = "5"
tokio = { version = "1.52.3", features = ["rt", "time"] }
# StreamExt for zbus signal streams.
futures-util = { version = "0.3", default-features = false }
webkit2gtk = "2.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
wayland-client = { version = "0.31", default-features = false }
wayland-protocols-wlr = { version = "0.3", features = ["client"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
] }
png = "0.17"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
